# robotics2-proj1

catkin_ws/: all.csv  dr.csv  dr_all.csv  dr_imu.csv  gps.csv  ground_truth.csv  mse.txt  states.pkl
catkin_ws/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
catkin_ws/devel/include/proj1robot_msgs/: ControlInput.h  GPS.h  Pose.h
catkin_ws/devel/share/common-lisp/ros/proj1robot_msgs/msg/: ControlInput.lisp  GPS.lisp  Pose.lisp  _package.lisp  _package_ControlInput.lisp  _package_GPS.lisp  _package_Pose.lisp  proj1robot_msgs-msg.asd
catkin_ws/devel/share/drive_twist_middleman/cmake/: drive_twist_middlemanConfig.cmake
catkin_ws/devel/share/gennodejs/ros/proj1robot_msgs/msg/: ControlInput.js  GPS.js  Pose.js
catkin_ws/devel/share/local_gps/cmake/: local_gpsConfig.cmake
catkin_ws/devel/share/pose_est/cmake/: pose_estConfig.cmake
catkin_ws/devel/share/pose_stats/cmake/: pose_statsConfig.cmake
catkin_ws/devel/share/proj1robot_description/cmake/: proj1robot_descriptionConfig.cmake
catkin_ws/devel/share/proj1robot_gazebo/cmake/: proj1robot_gazeboConfig.cmake
catkin_ws/devel/share/proj1robot_msgs/cmake/: proj1robot_msgs-msg-extras.cmake  proj1robot_msgs-msg-paths.cmake  proj1robot_msgsConfig.cmake
catkin_ws/devel/share/proximity_middleman/cmake/: proximity_middlemanConfig.cmake
catkin_ws/devel/share/roseus/ros/proj1robot_msgs/: manifest.l
catkin_ws/devel/share/roseus/ros/proj1robot_msgs/msg/: ControlInput.l  GPS.l  Pose.l
catkin_ws/devel/share/state_estimation_imu/cmake/: state_estimation_imuConfig.cmake
catkin_ws/devel/share/teleop/cmake/: teleopConfig.cmake
catkin_ws/src/drive_twist_middleman/: CMakeLists.txt  drive_twist_middleman.py  package.xml
catkin_ws/src/local_gps/: CMakeLists.txt  local_gps.py  package.xml
catkin_ws/src/pose_est/: CMakeLists.txt  package.xml  pose_est.py
catkin_ws/src/pose_stats/: CMakeLists.txt  package.xml  pose_stats.py
catkin_ws/src/proj1robot_description/: CMakeLists.txt  package.xml
catkin_ws/src/proj1robot_description/launch/: proj1robot_preview.launch  proj1robot_spawn.launch
catkin_ws/src/proj1robot_description/rviz/: urdf.rviz
catkin_ws/src/proj1robot_description/scripts/: generate_random_position.py
catkin_ws/src/proj1robot_description/urdf/: proj1robot.urdf  proj1robot_old.urdf
catkin_ws/src/proj1robot_gazebo/: CMakeLists.txt  package.xml
catkin_ws/src/proj1robot_gazebo/launch/: proj1.launch
catkin_ws/src/proj1robot_gazebo/worlds/: proj1room.world
catkin_ws/src/proj1robot_msgs/: CMakeLists.txt  package.xml
catkin_ws/src/proj1robot_msgs/msg/: ControlInput.msg  Pose.msg
catkin_ws/src/proximity_middleman/: CMakeLists.txt  package.xml  proximity_middleman.py
catkin_ws/src/state_estimation_imu/: package.xml
catkin_ws/src/teleop/launch/: base.launch  drive.launch
