<?xml version="1.0"?>
<package format="2">
  <name>local_gps</name>
  <version>0.0.0</version>
  <description>A middleman that subscribes to the gazebo world ground truth position of the proj1robot, calculates it's distance from the top 4 corners of the room, and scales the gaussian noise by distance, with the provided distribution being the noise at 1 meter. It publishes to /robot/gps in a 2x2 multidim float64. Each one representing the (0,0), (0,10), (10,10), and (10,0) coordinates based on matrix positions respectively ([0,0], [0,1], [1,1], [1,0]), as beacons.</description>

  <maintainer email="lia4@rpi.edu">Adam Li</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>proj1robot_gazebo</exec_depend>

  <export>
    <!-- -->
  </export>
</package>
