<?xml version="1.0"?>
<package format="2">
  <name>proj1robot_gazebo</name>
  <version>0.0.0</version>
  <description>The proj1robot_gazebo package. The simulation environment for the Robotics II Mini-Project 1.</description>
  <maintainer email="lia4@rpi.edu">Adam Li</maintainer>

  <license>TODO</license>

  <!-- Dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>gazebo_ros</exec_depend>

  <export>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
    <gazebo_ros gazebo_media_path="${prefix}/models"/>
  </export>
</package>
