<?xml version="1.0"?>
<package format="2">
  <name>proj1robot_msgs</name>
  <version>0.0.0</version>
  <description>Messages used throughout proj1.</description>
  <maintainer email="lia4@rpi.edu">Adam Li</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <!--  -->
  </export>
</package>
