<?xml version="1.0"?>
<package format="2">
  <name>proximity_middleman</name>
  <version>0.0.0</version>
  <description>A middleman that subscribes and publishes to proximity_raw and proximity. It takes the sensor_msgs/LaserScan message, finds the distance projected along the main axis for each point, and takes the minimum value to output to a sensor_msgs/Range message.</description>

  <maintainer email="lia4@rpi.edu">Adam Li</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>proj1robot_gazebo</exec_depend>

  <export>
    <!-- -->
  </export>
</package>
